Ready for bash!

--- a/Third Year/GSASD/P2/Exercise_2/Makefile.prueba
+++ b/Third Year/GSASD/P2/Exercise_2/Makefile.prueba
@@ -3,8 +3,8 @@
 
 # Parameters
 
-CLIENT = prueba_client
-SERVER = prueba_server
+CLIENT = prueba_client.out
+SERVER = prueba_server.out
 
 SOURCES_CLNT.c = 
 SOURCES_CLNT.h = 
